--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -142,10 +142,10 @@ export const title = "Home"
 				<p class="italic">Open to the public – come meet us!</p>
 				<ul class="list-disc list-inside">
 					<li>
-						Wed, July 16, 6-7:30pm at <a href="https://www.sno-isle.org/locations/mountlake-terrace/">Mountlake Terrace Library</a>'s Small Meeting Room 
+						Wed, Aug 20, 6-7:30pm at <a href="https://www.sno-isle.org/locations/edmonds/">Edmonds Library</a>'s Meeting Room 
 					</li>
 					<li>
-						Meetings are usually the third Wednesdays at 6pm - August will be in Edmonds! 
+						Meetings are usually the third Wednesdays at 6pm 
 					</li>
 				</ul>
 			</div>
