--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -127,9 +127,13 @@ export const title = "Home"
 			<div class="relative px-6 lg:px-8 max-w-7xl mx-auto">
 				<h3 class="text-3xl font-bold mb-4">Upcoming events:</h3>
 
-				<h4 class="text-xl font-semibold">Advocacy!</h4>
+				<h4 class="text-xl font-semibold">NSBA Pedal & Plate Fundraiser Dinner!</h4>
 				<p class="italic mb-2">
-					Sound Transit has various outreach options for their <a href="https://everettlink.participate.online/">Everett Link Extension</a>, including nonmotorized station access allowance projects! 
+					 Friday, October 24 @ 5:30 PM Join world traveller, author and actor Willie Weir for an evening of food, wine and entertainment in support of North Sound Bicycle Advocates. Willie will have you laughing with tales from the road and the foibles of the human condition. You will enjoy a delicious traditional lasagne (vegetarian version available), salad and dessert. <a href="https://givebutter.com/NSBA_Dinner">Tickets now available!</a> 
+				</p>
+				<h4 class="text-xl font-semibold">Advocacy rides 🚴</h4>
+				<p class="italic mb-2">
+					9/13 Interurban Gap ride to Mathay-Ballinger 
 				</p>
 				<h4 class="text-xl font-semibold">Weekly rides 🚴</h4>
 				<p class="italic mb-2">
@@ -142,7 +146,7 @@ export const title = "Home"
 				<p class="italic">Open to the public – come meet us!</p>
 				<ul class="list-disc list-inside">
 					<li>
-						Wed, Aug 20, 6-7:30pm at <a href="https://www.sno-isle.org/locations/edmonds/">Edmonds Library</a>'s Meeting Room 
+						Wed, Sep 17, 6-7:30pm at <a href="https://kcls.org/locations/shoreline/">Shoreline Library</a>'s Large Meeting Room 
 					</li>
 					<li>
 						Meetings are usually the third Wednesdays at 6pm 
