--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -127,14 +127,6 @@ export const title = "Home"
 			<div class="relative px-6 lg:px-8 max-w-7xl mx-auto">
 				<h3 class="text-3xl font-bold mb-4">Upcoming events:</h3>
 
-				<h4 class="text-xl font-semibold">NSBA Pedal & Plate Fundraiser Dinner!</h4>
-				<p class="italic mb-2">
-					 Friday, October 24 @ 5:30 PM Join world traveller, author and actor Willie Weir for an evening of food, wine and entertainment in support of North Sound Bicycle Advocates. Willie will have you laughing with tales from the road and the foibles of the human condition. You will enjoy a delicious traditional lasagne (vegetarian version available), salad and dessert. <a href="https://givebutter.com/NSBA_Dinner">Tickets now available!</a> 
-				</p>
-				<h4 class="text-xl font-semibold">Advocacy rides 🚴</h4>
-				<p class="italic mb-2">
-					9/13 Interurban Gap ride to Mathay-Ballinger 
-				</p>
 				<h4 class="text-xl font-semibold">Weekly rides 🚴</h4>
 				<p class="italic mb-2">
 					Meet at Edmonds City Hall. Social pace, 8-12 miles.
@@ -146,10 +138,13 @@ export const title = "Home"
 				<p class="italic">Open to the public – come meet us!</p>
 				<ul class="list-disc list-inside">
 					<li>
-						Wed, Sep 17, 6-7:30pm at <a href="https://kcls.org/locations/shoreline/">Shoreline Library</a>'s Large Meeting Room 
+						Wed, Nov 19, 6-7:30pm at <a href="https://www.sno-isle.org/locations/mountlake-terrace/">Mountlake Terrace Library</a>'s Small Meeting Room 
 					</li>
 					<li>
 						Meetings are usually the third Wednesdays at 6pm 
+					</li>
+					<li>
+						We'll be taking off December. Enjoy your holiday, we hope you get that new bike, and we'll see you in January! 
 					</li>
 				</ul>
 			</div>
