--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -138,13 +138,13 @@ export const title = "Home"
 				<p class="italic">Open to the public – come meet us!</p>
 				<ul class="list-disc list-inside">
 					<li>
-						Wed, Nov 19, 6-7:30pm at <a href="https://www.sno-isle.org/locations/mountlake-terrace/">Mountlake Terrace Library</a>'s Small Meeting Room 
+						Wed, Jan 28, 6-7:30pm at <a href="https://www.rei.com/stores/lynnwood">Lynnwood REI</a>'s Community Room 
 					</li>
 					<li>
 						Meetings are usually the third Wednesdays at 6pm 
 					</li>
 					<li>
-						We'll be taking off December. Enjoy your holiday, we hope you get that new bike, and we'll see you in January! 
+						We're excited to get rolling to kick off the new year! 
 					</li>
 				</ul>
 			</div>
