--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -138,10 +138,13 @@ export const title = "Home"
 				<p class="italic">Open to the public – come meet us!</p>
 				<ul class="list-disc list-inside">
 					<li>
-						Wed, Jan 28, 6-7:30pm at <a href="https://www.rei.com/stores/lynnwood">Lynnwood REI</a>'s Community Room 
+						Wed, Feb 25, 6-7:30pm at <a href="https://kcls.org/locations/shoreline/">Shoreline Library</a>'s Small Meeting Room 
 					</li>
 					<li>
-						Meetings are usually the third Wednesdays at 6pm 
+						Wed, Mar 25, 6-7:30pm at Mountlake Terrace Library's Small Meeting Room 
+					</li>
+					<li>
+						Meetings are now on the <i>fourth</i> Wednesdays at 6pm 
 					</li>
 					<li>
 						We're excited to get rolling to kick off the new year! 
